--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -3,16 +3,12 @@
 
 {% block content %}
 
-
-   
-
-
    <div class="row">
   <div class="col-0 col-lg-2"></div>
   <div class="col-12 col-lg-8 content-lastfive">
     <img src="{{ url_for('static', filename = 'divesightings.png') }}" />
 
-    {%for r in sights %}
+    {%for r in results %}
 
     <table class="table">
       <thead class="thead-dark">
@@ -52,6 +48,192 @@
   </div>
   <div class="col-0 col-lg-2"></div>
 </div>
+
+
+<!-- Pagination -->
+<div class='pagination-div'>
+<nav aria-label="..." class='pagination-nav'>
+    <ul class="pagination">
+{%if max_pages >=6  %}
+    {%if current_page < 4  %}
+        {%if current_page == 1  %}
+            <li class="page-item ">
+                <a class="page-link active" href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=4" >4</a>
+            </li>
+            
+
+        {%elif current_page == 2  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=4" >4</a>
+            </li>
+            
+
+        {%elif current_page == 3  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=4" >4</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=5" >5</a>
+            </li>
+            
+        {%endif%}
+
+    {% elif (current_page >= 4) and ((max_pages - current_page) >= 3) %}
+        {%for p in range(current_page - 3,current_page)%}
+        <li class="page-item ">
+        <a class="page-link " href="?page={{p}}" >{{p}}</a>
+        </li>
+        {%endfor%}
+
+        <li class="page-item ">
+        <a class="page-link active" href="?page={{current_page}}" >{{current_page}}</a>
+        </li>
+
+        {%for p in range(current_page+1, current_page+3)%}
+        <li class="page-item ">
+        <a class="page-link " href="?page={{p}}" >{{p}}</a>
+        </li>
+        {%endfor%}
+
+
+    {% elif (current_page >= 4) and ((max_pages - current_page) < 3) %}
+        {%for p in range(current_page - 3,current_page)%}
+        <li class="page-item ">
+        <a class="page-link " href="?page={{p}}" >{{p}}</a>
+        </li>
+        {%endfor%}
+
+        <li class="page-item ">
+        <a class="page-link active" href="?page={{current_page}}" >{{current_page}}</a>
+        </li>
+
+        {%for p in range(current_page+1, max_pages+1)%}
+        <li class="page-item ">
+        <a class="page-link " href="?page={{p}}" >{{p}}</a>
+        </li>
+        {%endfor%}
+    {%endif%}  
+
+<!-- max page 1 to 5  -->
+{%else%}
+    {%if current_page == 1  %}
+            <li class="page-item ">
+                <a class="page-link active" href="?page=1" >1</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+            
+
+        {%elif current_page == 2  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=2" >2</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+            
+
+        {%elif current_page == 3  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=3" >3</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+
+
+        {%elif current_page == 4  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=4" >4</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+
+
+        {%elif current_page == 5  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=4" >4</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=5" >5</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+            
+        {%endif%}
+{%endif%}  
+
+</ul>
+    </nav>
+</div>
+<!-- end of pagination -->
 
 
 <div>
