--- a/templates/editdive.template.html
+++ b/templates/editdive.template.html
@@ -1,29 +1,98 @@
-{% extends "index.template.html" %}
+{% extends "index.template.html" %} {% block content %}
 
-
-{% block content %}
-
-    <form method="POST" >
-        <label>Country</label>
-        <input type="text" name="location" value="{{dives.location}}" required/>
-        <br/>
-        <label>Dive Site</label>
-        <input type="text" name="divesite" value="{{dives.divesite}}" required/>
-        <br/>
-        <label>Temperature</label>
-        <input type="text" name="temperature" value="{{dives.temperature}}" required/>
-        <br/>
-        <label>Depth</label>
-        <input type="text" name="depth" value="{{dives.depth}}" required/>
-        <br/>
-        <label>Date</label>
-        <input type="date" name="date" value="{{dives.date}}" required/>
-        <br/>
-        <label>Comments</label>
-        <input type="text" name="comments" value="{{dives.comments}}"/>
-
-        <input type="submit"/>
+<div class="card card-outline-secondary">
+  <div class="card-header">
+    <h3 class="mb-0">Create Dive</h3>
+  </div>
+  <div class="card-body">
+    <form class="form" role="form" autocomplete="off" method="POST">
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Country</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="location"
+            value="{{dives.location}}"
+            required
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Dive Site</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="divesite"
+            value="{{dives.divesite}}"
+            required
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Temperature</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="temperature"
+            value="{{dives.temperature}}"
+            required
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label">Depth</label>
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="depth"
+            value="{{dives.depth}}"
+            required
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label">Date</label>
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="date"
+            name="date"
+            value="{{dives.date}}"
+            required
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Comments</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="comments"
+            value="{{dives.comments}}"
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"></label>
+        <div class="col-lg-9">
+          <input type="submit" />
+        </div>
+      </div>
     </form>
+  </div>
 
-
-{% endblock %}
+  {% endblock %}
+</div>
