--- a/templates/editsight.template.html
+++ b/templates/editsight.template.html
@@ -5,17 +5,38 @@
 
 
 
-    <form method="POST" >
-        <label>Species</label>
-        <input type="text" name="species" value="{{sights.species}}" required/>
-        <br/>
-        <label>Comments</label>
-        <input type="text" name="comments" value="{{sights.comments}}" />
-        <br/>
-        <input type="hidden" role="uploadcare-uploader" value="{{sights.photos}}" name="photos" />
-        
-        <input type="submit"/>
-    </form>
+    <div class="card card-outline-secondary">
+                        <div class="card-header">
+                            <h3 class="mb-0">Create Sightings</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form" role="form" autocomplete="off" method="POST">
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Species</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="species" value="{{sights.species}}" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Comments</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="comments" value="{{sights.comments}}" >
+                                    </div>
+                                </div>
 
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Photo</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="hidden" role="uploadcare-uploader" value="{{sights.photos}}" name="photos">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label"></label>
+                                    <div class="col-lg-9">
+                                       <input type="submit"/>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
 
 {% endblock %}
